# doClone - a library and front end for creating or restoring images of GNU/Linux systems.
# Copyright (C) 2013 Joan Lledó <joanlluislledo@gmail.com>
#
# See the file COPYING for copying conditions.

exampledir = $(datarootdir)/doc/@PACKAGE@/examples

example_DATA = \
	doclone.c \
	doclone.cc \
	README
	
EXTRA_DIST = \
	doclone.c \
	doclone.cc \
	README
